--- a/FLCalculator.vcxproj
+++ b/FLCalculator.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="vendor\IamGuiNecessary\imgui_widgets.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="vendor\IamGuiNecessary\imconfig.h" />
     <ClInclude Include="vendor\IamGuiNecessary\imgui.h" />
     <ClInclude Include="vendor\IamGuiNecessary\imgui_impl_glfw.h" />
@@ -152,6 +153,12 @@
     <ClInclude Include="vendor\IamGuiNecessary\imstb_rectpack.h" />
     <ClInclude Include="vendor\IamGuiNecessary\imstb_textedit.h" />
     <ClInclude Include="vendor\IamGuiNecessary\imstb_truetype.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="FLCalculator.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="C:\Users\marek\Desktop\ForbiddeCalculatorIcon.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
